correction des alignements pour correspondre le plus possible à la maquette

--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,7 @@ body {
 }
 
 /** general provisoire **/
-h1,
-h2 {
+h1, h2 {
     font-size: 22px;
     font-weight: 700;
 }
@@ -122,7 +121,7 @@ header {
 }
 
 /***** Main Section ***********/
-.main-section{
+.main-section {
     margin-bottom: 22px;
 }
 
@@ -221,6 +220,7 @@ span.search-button-text {
 .filters-title {
     font-size: 18px;
 }
+
 .filter-icon {
     font-size: 22px;
     color: var(--main-blue-color);
@@ -369,6 +369,7 @@ span.search-button-text {
     padding: 30px;
     width:100%;
     box-sizing: border-box;
+    margin: 33px 0;
 }
 
 .activity-section h2{
@@ -394,8 +395,15 @@ span.search-button-text {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
+.activity-cards .card-content {
+    display: flex;
+    align-items: center;
+    height: 59px;
+}
+
 .activity-cards .card-title {
-    margin: 20px 0 20px 19px; 
+    margin-left: 19px; 
 }
 
 
@@ -404,6 +412,7 @@ footer {
     display: flex;
     background-color: var(--main-light-grey-color);
     padding-bottom: 20px;
+    gap:20px;
 }
 
 .footer-section {
@@ -433,10 +442,12 @@ footer {
     .filters-title {
         margin-top: 0px;
     }
+    
     .main-filters {
         flex-direction: column;
         gap: 5px;
     }
+
     .filter-button {
         font-size: 16px;
     }
@@ -456,6 +467,7 @@ footer {
 
     .popular-cards {
         grid-template: 1fr / 1fr 1fr 1fr;
+        margin-top : 20px;
     }
 
     .popular-cards img {
@@ -465,6 +477,10 @@ footer {
 
     .activity-cards img {
         height: 200px;
+    }
+
+    .activity-cards .card-content {
+        height: 70px;
     }
 
 }
@@ -526,6 +542,7 @@ footer {
         border-radius: 15px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
+
     .search-button-text {
         display: none;
     }
@@ -533,6 +550,7 @@ footer {
     .search-button-icon {
         display: contents;
     }
+
     .search-input {
         max-width: 100%;
         text-align: start;
@@ -552,6 +570,7 @@ footer {
 
     .hosting-and-popular {
         flex-direction: column-reverse;
+        gap:5px;
     }
 
     .hosting-section , .popular-section { 
@@ -561,6 +580,7 @@ footer {
 
     .hosting-section {       
         background-color: var(--main-white-color);
+        padding-bottom: 20px;
     }
     
     .popular-section {
@@ -572,6 +592,14 @@ footer {
         gap: 15px;
     }
 
+    .hosting-cards {
+        margin: 17px 0 15px 0; 
+    }
+
+    .popular-cards {
+        margin-top: 17px;
+    }
+
     .popular-cards img {
         height: 136px;
     }
@@ -580,13 +608,19 @@ footer {
         height: 141px;
     }
 
+    .activity-cards .card-content {
+        height: 59px;
+    }
+
     /****** footer adjustments ******/
     footer {
         flex-direction: column;
-        gap: 20px;
+        gap: 30px;
+        padding-top: 10px;
     }
 
     .footer-section {
         width: 100%;
+        padding-left: 30px;
     }
 }
